--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,51 @@
 @tailwind utilities;
 
 
+/* Global styles for the tables */
+.table-container {
+    @apply w-full max-w-full overflow-x-auto;
+  }
+  
+  table {
+    @apply w-full border-collapse table-auto;
+  }
+  
+  th,
+  td {
+    @apply px-4 py-2 text-sm font-medium text-left text-gray-600;
+  }
+  
+  th {
+    @apply font-semibold tracking-wider text-gray-800 uppercase bg-gray-100;
+  }
+  
+  td {
+    @apply text-sm font-medium text-gray-600;
+  }
+  
+  tr:nth-child(even) {
+    @apply bg-gray-50;
+  }
+  
+  tr:hover {
+    @apply bg-gray-200;
+  }
+  
+  .title_text {
+    @apply mb-4 text-2xl font-bold text-blue-500;
+  }
+  
+  .table-auto td, .table-auto th {
+    @apply border border-gray-300;
+  }
+  
+  table td:last-child {
+    @apply border-b-0;
+  }
+  
+  /* Optional: For adding a responsive scrollable table */
+  @media (max-width: 768px) {
+    .table-container {
+      @apply block overflow-x-auto;
+    }
+  }
